[package]
name = "lan-share"
version = "0.3.0"
edition = "2021"
description = "LanShare - 基于 LSP3 协议的局域网文件共享（加密/重传/流控/拥塞控制/差异传输/压缩）"

[dependencies]
lsp-protocol = { path = "../lsp-protocol" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
local-ip-address = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.8", features = ["ws"] }
http-body-util = "0.1"
tower-http = { version = "0.6", features = ["trace"] }
base64 = "0.22"
percent-encoding = "2"
tokio-util = { version = "0.7", features = ["io"] }
tray-item = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
bcrypt = "0.15"
futures-util = "0.3"
scopeguard = "1"
zip = { version = "2", features = ["deflate"] }
walkdir = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_UI_WindowsAndMessaging"] }
