[package]
name = "lanshare-client"
version = "0.1.0"
edition = "2021"
description = "LanShare WinFsp 客户端 - 将远程共享挂载为本地盘符（只读）"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
widestring = "1"
parking_lot = "0.12"

[target.'cfg(windows)'.dependencies]
winfsp = { version = "0.13", features = ["full", "windows-61"] }
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
] }

[build-dependencies]
winfsp = { version = "0.13", features = ["delayload"] }
