[package]
name = "lanshare-client"
version = "0.1.0"
edition = "2021"
description = "LanShare WinFsp 客户端 - 将远程共享挂载为本地盘符（只读）"
autotests = false
autobins = false
autolib = false

[lib]
name = "lanshare_client"
path = "src/lib.rs"

[[bin]]
name = "lanshare-client"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
widestring = "1"
parking_lot = "0.12"
base64 = "0.22"

[target.'cfg(windows)'.dependencies]
winfsp = { version = "0.13", features = ["full", "windows-61"] }
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_Security_Cryptography",
] }

[build-dependencies]
winfsp = { version = "0.13", features = ["delayload"] }
